=== Development

* enhancements
  * manage backtrace-ignore patterns with Spec::Runner.configure (Martin
    Emde). Closes #870.
  * friendly mock argument expectation failure message (Tim Harper). Closes
    #868.

* not really a bug fix or enhancement
  * temporarily moved heckle feature to features-pending (waiting to see what
    happens with
    http://rubyforge.org/tracker/index.php?func=detail&aid=26786&group_id=1513&atid=5921)

=== Version 1.2.8 / 2008-07-16

* enhancements
  * better messages for should[_not] be_nil (Chad Humphries and Rob Sanheim)
  * should and should_not accept optional custom message
    (suggestion from Rob Sanheim)
    * result.should be_nil, "expected result to be nil"
  * added 'spec/stubs/cucumber' to plug RSpec's stubbing framework into
    Cucumber scenarios.
  * added unstub method to remove a stub mid-example (Scott Taylor). Closes
    #853.
  * add more readable diff when expected and actual are hashes (Ryan Bigg).
    Closes #848.

* bug fixes
  * fixed --line option for ruby 1.9.1
  * fix stub_chain conflict between two chains starting with the same message
    (Mike Rohland). Closes #846.

=== Version 1.2.7 / 2009-06-22

* enhancments
  * added support for fakes using obj.stub(:method) { # implementation }
  * allow subject { self } (Jarmo Pertman). Closes #816.
  * friendly error message when a matcher returns nil on a failure message
  * add ruby_cmd option to SpecTask (Rick DeNatale). Closes #823.
    * also added missing specs for SpecTask - thanks Rick!
  * add support for generating matchers with fluent interfaces with the
    Matcher DSL

* bug fixes
  * NegativeOperatorMatcher now returns false (Wesley Beary). Closes #812.
  * derive MockExpectationError from Exception rather than StandardError
    (Kerry Buckley). Closes #830.
  * fix bug where multi-line failure messages weren't getting picked up by
    autotest (Jarmo Pertman). Closes #832.